--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Break Bread</title>
+  <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -21,6 +21,8 @@
   <button onclick="giveBaker()"> [<span ID="bakersID">0</span>] Give Baker <span ID="bakerCostID">5</span> bread</button>
   <!-- millers button -->
   <button onclick="giveMiller()"> [<span ID="millersID">0</span>] Give Miller <span ID="millerCostID">15</span> bread</button>
+  <!-- the5000 button -->
+  <button onclick="giveThe5000()"> [<span ID="the5000ID">0</span>] Give The-5000 <span ID="the5000CostID">5000</span> bread</button>
   <!-- You have broken a total of text -->
   <p>You have broken <span ID="totalBreadID">0</span> pieces of bread.</p> 
   
