Update index.html to include gerRAT's high score

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   <button onclick="giveThe5000()"> [<span ID="the5000ID">0</span>] Give The-5000 <span ID="the5000CostID">5000</span> bread</button>
   <!-- You have broken a total of text -->
   <p>You have broken <span ID="totalBreadID">0</span> pieces of bread.</p> 
+  <p> </p>
+  <p> </p>
+  <p> </p>
+  <p> </p>
+  <p>High score achived by gerRAT: 1,159,608.8 </p>
   
   
    <script src="script.js"></script> 
